--- a/tape-sample/pom.xml
+++ b/tape-sample/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.squareup</groupId>
+    <groupId>com.indoqa.thirdparty</groupId>
     <artifactId>tape-parent</artifactId>
     <version>1.2.4-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
