Added missing nexus staging plugin

--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,17 @@
             </sdk>
           </configuration>
         </plugin>
+
+        <plugin>
+          <groupId>org.sonatype.plugins</groupId>
+          <artifactId>nexus-staging-maven-plugin</artifactId>
+          <extensions>true</extensions>
+          <configuration>
+            <serverId>sonatype-nexus-staging</serverId>
+            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+            <autoReleaseAfterClose>false</autoReleaseAfterClose>
+          </configuration>
+        </plugin>	
       </plugins>
     </pluginManagement>
 
