--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
   <groupId>com.indoqa.thirdparty</groupId>
   <artifactId>tape-parent</artifactId>
-  <version>1.2.4</version>
+  <version>1.2.5-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Tape (Parent)</name>
@@ -56,7 +56,7 @@
     <url>http://github.com/Indoqa/tape</url>
     <connection>scm:git:git://github.com/Indoqa/tape.git</connection>
     <developerConnection>scm:git:git@github.com:Indoqa/tape.git</developerConnection>
-    <tag>tape-parent-1.2.4</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <organization>
